fixed navbar alignment with CSS

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -35,11 +35,14 @@ body {
     font-size: 1.6rem;
     color: white;
     font-weight: 700;
+
   }
 
   .navbar ul {
     display: flex;
     list-style: none;
+    align-content: space-between;
+    justify-content: flex-end;
   }
 
   .navbar li {
@@ -57,6 +60,7 @@ body {
     transition: all 0.3s ease;
     position: relative;
     overflow: hidden;
+
   }
 
   .navbar-btn:hover {
